--- a/src/css/caculatorForm.css
+++ b/src/css/caculatorForm.css
@@ -1,7 +1,6 @@
 /* Form Input ==========================================*/
-.caculatorForm{
+  .caculatorForm{
     text-align: left;
-    
   }
   .showResult{
     text-align: center;
@@ -14,18 +13,16 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
-  
-  body {
-    font-family: 'Nunito', sans-serif;
-    color: #384047;
-  }
-  
-  form {
-    max-width: 300px;
+
+  .caculForm {
     margin: 10px auto;
     padding: 10px 20px;
     background: #f4f7f8;
     border-radius: 8px;
+  }
+
+  .caculatorDiv{
+    padding: 2%;
   }
   
   h1 {
@@ -61,7 +58,6 @@
   
   .btnForm {
     padding: 19px 39px 18px 39px;
-    /* color: #FFF; */
     background-color: #4bc970;
     font-size: 18px;
     text-align: center;
@@ -113,7 +109,7 @@
     }
   }
   
-  .form{
+  .caculForm{
     border: 0.5px solid #dad3d3;
     box-shadow: 1px 2px 10px #888888
   }
