--- a/src/css/foodDetail.css
+++ b/src/css/foodDetail.css
@@ -2,6 +2,22 @@
     box-shadow: 1px 2px 10px #888888;
 }
 
+/* Search */
+.has-search .form-control-feedback {
+  right: initial;
+  left: 0;
+  color: #ccc;
+}
+
+.has-search .form-control {
+  padding-right: 12px;
+  padding-left: 34px;
+  border-radius: 50px;
+}
+
+
+
+
 .divFoodList {
     font-family: Georgia;
     font-size: 13px;
